[tool.poetry]
name = "pygame-test"
version = "0.1.0"
description = ""
authors = ["Bradley Furst <bradley.furst@evonik.com>"]
readme = "README.md"
packages = [{include = "pygame_test"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
